    version (Martin J. Evans)

  - ora_driver_name, ora_client_info, ora_client_identifier,
    ora_action and ora_oci_success_warn were set twice (if specified)
    on connect as they were not deleted from the connect attributes
    once handled. Code now leaves the setting to the later STORE DBI
    calls (Martin J. Evans)

  - fixed some compiler warnings for %lf (Martin J. Evans)

  [CHANGE IN BEHAVIOUR]

  - ora_taf and ora_taf_sleep were redundant and have been removed.
    To enable/disable TAF simply set ora_taf_function and if you
    want to sleep do it in your callback (Martin J. Evans)

  - ora_taf_function can now be a code reference as well as a string
    (Martin J. Evans)

  [ENHANCEMENTS]

  - the ora_can_taf method was virtually useless since you can only
    call it after connecting and to enable TAF you had to do it in the
    connect call. Now you enable and disable TAF at any time by
    simply setting or clearing the ora_taf_function (see RT78811)
    (Martin J. Evans)

  - the ora_taf_function is now passed a third argument of the
    connection handle (Martin J. Evans)

  - RT78987 - removed Oraperl.pm and oraperl.ph; these files will be available
    in a separate distribution named "Oraperl" (David Perry)

  [MISCELLANEOUS]

  - hide dr, db and st packages from PAUSE (Martin J. Evans)

  - added a few more simple TAF tests (Martin J. Evans)

1.50      2012-08-15
 - RT78965 - Remove Oraperl tests (which were forcing a require on Oraperl)

1.48      2012-08-09
 - promote 1.47_00 to official release

1.47_00   2012-07-11

  [BUG FIXES]

  - fixed redeclaration of $len in 31lob.t - (Martin J, Evans)

  - RT55028 - stop segfaulting when attempting to read empty lobs
    (Martin J. Evans)

  - RT69059 - Despite OCIPing being documented as added in 10.2 AIX
    does not seem to have it in 10.2 leading to undefined symbol -
    Martin J. Evans

  [DOCUMENTATION]
  - Promoted the troubleshooting for the different architectures to