@@ -662,6 +662,9 @@ SELECT *
          , 'FLOAT'    , tc.DATA_PRECISION
          , 'DATE'     , 19
          , 'VARCHAR2' , tc.CHAR_LENGTH
+         , 'CHAR'     , tc.CHAR_LENGTH
+         , 'NVARCHAR2', tc.CHAR_LENGTH
+         , 'NCHAR'    , tc.CHAR_LENGTH
          , tc.DATA_LENGTH
          )                   COLUMN_SIZE
        , decode( tc.DATA_TYPE
